@@ -26,6 +26,9 @@ Bug Fixes
   increase memory pressure on processes using threads.
   (Robert Collins, John Arbash Meinel, #514090)
 
+* The new ``merge_file_content`` should now be ok with tests to avoid
+  regressions.
+  (Vincent Ladeuil)
 
 bzr 2.1.0rc2
 ############
